removed superfluous sidebar stuff. added search states

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -96,6 +96,10 @@ $lhRegular = 1.2em
 $lhMedium = 1.5em
 $lhLarge = 1.8em
 
+
+$fsl3 = 1.5rem
+$fsl4 = 1.25rem
+
 // layout
 $navbarHeight = 3.6rem
 $sidebarWidth = 15.5rem
@@ -114,3 +118,11 @@ $contentWidthXL = 1440px;
 // code
 $lineNumbersWrapperWidth = 3.5rem
 $codeLang = js ts html md vue css sass scss less stylus go java c sh yaml py
+
+.reset-type
+  font-weight: initial;
+  font-size: initial
+  margin-top: 0;
+  line-height: 1;
+  border-bottom: initial
+  display: initial
