updated build page

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -103,6 +103,8 @@ a
     display none
 
 #wrapper.home>div.content, .content-block
+  box-sizing: border-box
+  width 100%
   max-width 996px
   margin 0 auto
   padding 0 2em
