--- a/docs/.vuepress/theme/styles/utils.styl
+++ b/docs/.vuepress/theme/styles/utils.styl
@@ -1,6 +1,12 @@
 .flex
   display flex
 
+.flex-row-wrap
+  flex-flow row wrap;
+
+.justify-center
+  justify-content center
+
 .flex-center
   align-items center
 
@@ -21,3 +27,19 @@
 
 .center
   text-align center
+
+.w100 {width: 100%}
+.w90 {width: 90%}
+.w80 {width: 80%}
+.w70 {width: 70%}
+.w60 {width: 60%}
+.w50 {width: 50%}
+.w40 {width: 40%}
+.w30 {width: 30%}
+.w20 {width: 20%}
+.w10 {width: 50%}
+
+.mw35ch {max-width: 35ch}
+.mw45ch {max-width: 45ch}
+.mw55ch {max-width: 55ch}
+
