text component handling footer

--- a/docs/.vuepress/theme/styles/utils.styl
+++ b/docs/.vuepress/theme/styles/utils.styl
@@ -28,6 +28,16 @@
 .center
   text-align center
 
+body, .dark-mode
+  .no-list
+    list-style none
+    list-style-image none
+    margin 0
+    padding 0
+    li
+      margin-left 0
+      padding 0
+
 .w100 {width: 100%}
 .w90 {width: 90%}
 .w80 {width: 80%}
@@ -43,3 +53,5 @@
 .mw45ch {max-width: 45ch}
 .mw55ch {max-width: 55ch}
 
+.mb05 {margin-bottom: 0.5rem }
+.mb1  {margin-bottom: 1rem   }
