Added language page typography

--- a/docs/.vuepress/theme/styles/utils.styl
+++ b/docs/.vuepress/theme/styles/utils.styl
@@ -53,5 +53,10 @@ body, .dark-mode
 .mw45ch {max-width: 45ch}
 .mw55ch {max-width: 55ch}
 
+.mt0  {margin-top: 0}
+.mt05 {margin-top: 0.5rem }
+.mt1  {margin-top 1rem   }
+
+.mb0  {margin-bottom: 0}
 .mb05 {margin-bottom: 0.5rem }
 .mb1  {margin-bottom: 1rem   }
