--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -10,6 +10,12 @@ $colorFail = rgb(184,0,0)
 // use this with the header video
 $legacyBgDark = rgb(34,34,34)
 
+///////////////////////////////////////
+// VAR GENERATOR                     //
+// ----------------------------------//
+
+
+
 // white mixes (for light grays)
 $colorWhite900 = mix($colorBlack, $colorWhite, 30%)
 $colorWhite800 = mix($colorBlack, $colorWhite, 20%)
