--- a/docs/.vuepress/theme/styles/utils.styl
+++ b/docs/.vuepress/theme/styles/utils.styl
@@ -285,10 +285,12 @@ b, &.b, strong {
   font-weight 600
 }
 
-.no-list
+.no-bullets
   list-style-type: none
   list-style-image: none
+  margin-left 0
   li
+    padding-left 0
     &:before
       display: none
 
