tidy up nav spacing for desktop

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -97,8 +97,8 @@ $lhMedium = 1.5em
 $lhLarge = 1.8em
 
 
-$fsl3 = 1.5rem
-$fsl4 = 1.25rem
+$fontSizel3 = 1.5rem
+$fontSizel4 = 1.25rem
 
 // layout
 $navbarHeight = 3.6rem
