enabled keyboard navigation without :focus-within

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -112,6 +112,9 @@ $breakS = 768px
 $breakXS = 499px
 $breakXXS = 356px
 
+// Heights
+$mobileBottomDrawerHeight = 108px
+
 // sizes
 $contentWidthXL = 1440px;
 
