tweaked external link icon position

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -84,11 +84,11 @@ a:not([href^="https://ethereum.org"]):not([href^="http://ethereum.org"]):not([hr
     margin-right: .3em
     display: inline-block
     content:'↗'
-    transform: translateY(.15em) 
+    // transform: translateY(.15em) 
     transition: all 0.1s ease-in-out
   &:hover
     &:after
-      transform: translateY(-.1em) translateX(.1em)
+      transform: translate(.15em, -.2em)
 
 .pointer
   cursor pointer
