Fix homepage content logic for translations

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -183,6 +183,7 @@ p
 .dark-mode p
   @extend .dark-mode .tc-text300
 
+// This class is automatically added to the built-in <Content /> component
 .content__default
   ul
     @extend .l7
