prevent stylus from parsing css min()

--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -6,8 +6,8 @@
   .page 
     width 100%
     max-width 1280px
-    padding-left min(7.5vw,96px)
-    padding-right min(7.5vw,96px)
+    padding-left unquote('min(7.5vw,96px)')
+    padding-right unquote('min(7.5vw,96px)')
     margin 0 auto
 
 @media screen and (min-width $breakL)
