--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -6,9 +6,15 @@
   .page 
     width 100%
     max-width 1280px
+    padding-left cssGrad(320, 12, 1280, 96)
     padding-left unquote('min(7.5vw,96px)')
+    padding-right cssGrad(320, 12, 1280, 96)
     padding-right unquote('min(7.5vw,96px)')
     margin 0 auto
+
+    @media screen and (min-width $breakL)
+      padding-left 96px
+      padding-right 96px
 
 @media screen and (min-width $breakL)
   .lg-up-hide
