--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -6,8 +6,10 @@
   .page 
     width 100%
     max-width 1280px
+    padding-left 0.75rem
     padding-left cssGrad(320, 12, 1280, 96)
     padding-left unquote('min(7.5vw,96px)')
+    padding-right 0.75rem
     padding-right cssGrad(320, 12, 1280, 96)
     padding-right unquote('min(7.5vw,96px)')
     margin 0 auto
