--- a/docs/.vuepress/theme/styles/lists.styl
+++ b/docs/.vuepress/theme/styles/lists.styl
@@ -31,12 +31,7 @@
         margin-bottom 1rem
       a
         text-decoration underline
-        // force a line break after the link
-        &:after
-          display: block;
-          content: '';
-          /* height: 1px; */
-          width: 100%;
+        display: block
     &.no-bullets
       margin-left 0
       li
