updating markdown text handling, isolated text styles [fixes #858 #832]

--- a/docs/.vuepress/theme/styles/lists.styl
+++ b/docs/.vuepress/theme/styles/lists.styl
@@ -13,6 +13,11 @@
       padding-left .5em
       margin-bottom .5em
 
+      p:first-of-type
+        margin-top 0
+      p:last-of-type
+        margin-bottom 0
+
       &:before
         content "\2022"
         color $colorPrimary500
