--- a/docs/.vuepress/theme/styles/utils.styl
+++ b/docs/.vuepress/theme/styles/utils.styl
@@ -54,30 +54,30 @@
 .fixed
   position fixed
 
-@media (min-width $breakS)
-  .sm-up-block
+@media (min-width $breakM)
+  .m-up-block
     display block
 
-@media (min-width $breakM)
-  .md-up-block
+@media (min-width $breakL)
+  .l-up-block
     display block
   
-  .md-up-flex
+  .l-up-flex
     display flex
   
-  .md-up-flex-row
+  .l-up-flex-row
     flex-direction row
 
-  .md-up-inline-block 
+  .l-up-inline-block 
     display inline-block
 
-  .md-up-hidden
+  .l-up-hidden
     display none
 
-  .md-up-relative
+  .l-up-relative
     position relative
 
-  .md-up-absolute
+  .l-up-absolute
     position absolute
 
 ///////////////////////////////////////
@@ -157,7 +157,7 @@ generateClasses(prependClass, appendClass, property, obj)
   margin 1.14em 0
   font-weight 400
 
-.md-up-l7
+.l-up-l7
   text-transform none
   letter-spacing 0
   @extend .l7
@@ -402,27 +402,27 @@ div:not(.rtl)
 
 @media (min-width: $breakM)
   // Margins
-  .md-up-mt-auto { margin-top: auto; }
-  .md-up-mb-auto { margin-bottom: auto; }
-  .md-up-ml-auto { margin-left: auto; }
-  .md-up-mr-auto { margin-right: auto; }
-  generateClasses('md-up-ma-', null, 'margin', $spacings)
-  generateClasses('md-up-mb-', null, 'margin-bottom', $spacings)
-  generateClasses('md-up-mt-', null, 'margin-top', $spacings)
+  .l-up-mt-auto { margin-top: auto; }
+  .l-up-mb-auto { margin-bottom: auto; }
+  .l-up-ml-auto { margin-left: auto; }
+  .l-up-mr-auto { margin-right: auto; }
+  generateClasses('l-up-ma-', null, 'margin', $spacings)
+  generateClasses('l-up-mb-', null, 'margin-bottom', $spacings)
+  generateClasses('l-up-mt-', null, 'margin-top', $spacings)
   div:not(.rtl)
-    generateClasses('md-up-ml-', null, 'margin-left', $spacings)
-    generateClasses('md-up-mr-', null, 'margin-right', $spacings)
+    generateClasses('l-up-ml-', null, 'margin-left', $spacings)
+    generateClasses('l-up-mr-', null, 'margin-right', $spacings)
   .rtl
-    generateClasses('md-up-ml-', null, 'margin-right', $spacings)
-    generateClasses('md-up-mr-', null, 'margin-left', $spacings)
+    generateClasses('l-up-ml-', null, 'margin-right', $spacings)
+    generateClasses('l-up-mr-', null, 'margin-left', $spacings)
 
   // Padding
-  generateClasses('md-up-pa-', null, 'padding', $spacings)
-  generateClasses('md-up-pb-', null, 'padding-bottom', $spacings)
-  generateClasses('md-up-pt-', null, 'padding-top', $spacings)
+  generateClasses('l-up-pa-', null, 'padding', $spacings)
+  generateClasses('l-up-pb-', null, 'padding-bottom', $spacings)
+  generateClasses('l-up-pt-', null, 'padding-top', $spacings)
   div:not(.rtl)
-    generateClasses('md-up-pl-', null, 'padding-left', $spacings)
-    generateClasses('md-up-pr-', null, 'padding-right', $spacings)
+    generateClasses('l-up-pl-', null, 'padding-left', $spacings)
+    generateClasses('l-up-pr-', null, 'padding-right', $spacings)
   .rtl
-    generateClasses('md-up-pl-', null, 'padding-right', $spacings)
-    generateClasses('md-up-pr-', null, 'padding-left', $spacings)
+    generateClasses('l-up-pl-', null, 'padding-right', $spacings)
+    generateClasses('l-up-pr-', null, 'padding-left', $spacings)
