--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -112,11 +112,11 @@ $sidebarWidth = 18.5rem
 $contentWidth = 768px
 
 // breakpoints
-$breakL = 1280px
-$breakM = 999px
-$breakS = 768px
-$breakXS = 499px
-$breakXXS = 356px
+$breakXS = 320px
+$breakS  = 414px
+$breakM  = 768px
+$breakL  = 1024px
+$breakXL = 1440px // Used as the max-width
 
 // Heights
 $mobileBottomDrawerHeight = 108px
