--- a/docs/.vuepress/theme/styles/utils.styl
+++ b/docs/.vuepress/theme/styles/utils.styl
@@ -359,8 +359,10 @@ $maxWidths = {
   '55ch': 55ch,
   '350px': 350px,
   '450px': 450px,
-  '768px': 768px,
-  '1140px': 1140px
+  's': $breakS,
+  'm': $breakM,
+  'l': $breakL,
+  'xl': $breakXL
 }
 
 $spacings = {
