Disable italicized external link icon [fixes #852]

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -44,6 +44,7 @@ a:not([href^="https://ethereum.org"]):not([href^="http://ethereum.org"]):not([hr
     display: inline-block
     content:'↗'
     transition: all 0.1s ease-in-out
+    font-style normal
   &:hover
     &:after
       transform: translate(.15em, -.2em)
