Fix dark mode [Fixes #1002]

--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -37,3 +37,6 @@
 
   .border-box-shadow-hover
     border 1px dotted $lightBorderColorDark
+
+  .ef-logo
+    background-image url(../images/ef-logo-white.png)
