Fix whitepaper formatting

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -111,6 +111,9 @@ div#wrapper:not(.home)>.content, .page
       filter grayscale(0)
       opacity 1
 
+  img
+    width 100%
+
 .iframe-container
   position relative
   overflow hidden
